tests/date/bad/uncomparable_duration.catala_en
## `UncomparableDurations` exception management

### `<` operator

```catala
declaration scope Lt:
  output d content boolean

scope Lt:
  definition d equals 1 month < 2 day
```

### `<=` operator

```catala
declaration scope Le:
  output d content boolean

scope Le:
  definition d equals 1 month <= 2 day
```

### `<=` operator

```catala
declaration scope Gt:
  output d content boolean

scope Gt:
  definition d equals 1 month > 2 day
```

### `>=` operator

```catala
declaration scope Ge:
  output d content boolean

scope Ge:
  definition d equals 1 month >= 2 day
```

```catala-test-inline
$ catala test-scope Ge
[ERROR] Error during evaluation: comparing durations in different units (e.g.
  months vs. days).

┌─⯈ tests/date/bad/uncomparable_duration.catala_en:40.31-40.33:
└──┐
40 │   definition d equals 1 month >= 2 day
   │                               ‾‾
   └┬ `UncomparableDurations` exception management
    └─ `>=` operator
#return code 123#
```

```catala-test-inline
$ catala test-scope Gt
[ERROR] Error during evaluation: comparing durations in different units (e.g.
  months vs. days).

┌─⯈ tests/date/bad/uncomparable_duration.catala_en:30.31-30.32:
└──┐
30 │   definition d equals 1 month > 2 day
   │                               ‾
   └┬ `UncomparableDurations` exception management
    └─ `<=` operator
#return code 123#
```

```catala-test-inline
$ catala test-scope Le
[ERROR] Error during evaluation: comparing durations in different units (e.g.
  months vs. days).

┌─⯈ tests/date/bad/uncomparable_duration.catala_en:20.31-20.33:
└──┐
20 │   definition d equals 1 month <= 2 day
   │                               ‾‾
   └┬ `UncomparableDurations` exception management
    └─ `<=` operator
#return code 123#
```

```catala-test-inline
$ catala test-scope Lt
[ERROR] Error during evaluation: comparing durations in different units (e.g.
  months vs. days).

┌─⯈ tests/date/bad/uncomparable_duration.catala_en:10.31-10.32:
└──┐
10 │   definition d equals 1 month < 2 day
   │                               ‾
   └┬ `UncomparableDurations` exception management
    └─ `<` operator
#return code 123#
```
